# pylon

./: README.md  docker-compose.yml
.github/workflows/: test-docker-compose.yml
backend/: .env.sample  .gitignore  Dockerfile  main.py  pyproject.toml
backend/public/: site.webmanifest
backend/src/: __init__.py  containers.py  main.py  manager.py
backend/src/config/: __init__.py  settings.py
backend/src/controllers/: __init__.py  containers.py
backend/src/controllers/docker/: __init__.py  get_status.py  list.py  start.py  stop.py
backend/src/controllers/terraria/: __init__.py  listServers.py  newServer.py
backend/src/middleware/: __init__.py  docker_client.py
backend/src/routes/: __init__.py  docker.py  health.py  terraria.py
backend/src/schemas/: __init__.py  docker.py  terraria.py
backend/src/utils/: __init__.py  docker_client.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ContainerCard.tsx  ServerDashboard.tsx  StartStopButton.tsx  StatusBadge.tsx  StatusChecker.tsx  UnifiedDashboard.tsx
frontend/src/hooks/: index.ts  usePolling.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
