[build-system]
requires = ["hatchling", "uv"]
build-backend = "hatchling.build"

[project]
name = "pylon"
version = "0.1.0"
description = "Pylon server management backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic-settings==2.1.0",
    "docker==7.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
